app/client/templates/views/home.less
/* Banner */
  @-moz-keyframes reveal-banner { 0% { opacity: 0; } 100% { opacity: 1; } }
  @-webkit-keyframes reveal-banner { 0% { opacity: 0; } 100% { opacity: 1; } }
  @-o-keyframes reveal-banner { 0% { opacity: 0; } 100% { opacity: 1; } }
  @-ms-keyframes reveal-banner { 0% { opacity: 0; } 100% { opacity: 1; } }
  @keyframes reveal-banner { 0% { opacity: 0; } 100% { opacity: 1; } }

  #banner {
    background-attachment: scroll, scroll, scroll, fixed;
    background-color: #645862;
    background-image: url("images/light-bl.svg"), url("images/light-br.svg"), url("images/overlay.png"), url("/images/Singapore-tuition.jpg");
    background-position: bottom left, bottom right, top left, top center;
    background-repeat: no-repeat, no-repeat, repeat, no-repeat;
    background-size: 25em, 25em, auto, cover;
    color: white;
    cursor: default;
    padding: 6em 0;
    text-align: center;
  }
  #banner .inner {
    -moz-animation: reveal-banner 1s 0.25s ease-in-out;
    -webkit-animation: reveal-banner 1s 0.25s ease-in-out;
    -o-animation: reveal-banner 1s 0.25s ease-in-out;
    -ms-animation: reveal-banner 1s 0.25s ease-in-out;
    animation: reveal-banner 1s 0.25s ease-in-out;
    -moz-animation-fill-mode: forwards;
    -webkit-animation-fill-mode: forwards;
    -o-animation-fill-mode: forwards;
    -ms-animation-fill-mode: forwards;
    animation-fill-mode: forwards;
    background: rgba(52, 27, 43, 0.5);
    color: white;
    display: inline-block;
    opacity: 0;
    padding: 3em;
    text-align: center;
    width: 60%;
  }

  #banner .inner header {
    display: inline-block;
    border-bottom: solid 2px;
    border-top: solid 2px;
    margin: 0 0 2em 0;
    padding: 3px 0 3px 0;
  }

  #banner .inner header h2 {
    border-bottom: solid 2px;
    border-top: solid 2px;
    font-size: 2.5em;
    font-weight: 900;
    letter-spacing: 0.2em;
    margin: 0;
    padding-left: 0.05em;
    position: relative;
    text-transform: uppercase;
  }
  
  .qualities{
    width: 63%;
    margin-top: 100px;
  }

  .section{
    padding-left: 1rem;
    padding-right: 1rem;
    width: 63%;
  }

  .center{
    margin: 0 auto;
    
  }

